# copernicus-cli-rust

./: .env-template  Cargo.toml  README.md
samples/: list_response.jsonc
src/: api.rs  args.rs  main.rs  util.rs
