[package]
name = "copernicus-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.2.0"
confy = "0.6.1"
dotenv = "0.15.0"
env_logger = "0.11.6"
geojson = "0.24.1"
log = "0.4.22"
reqwest = "0.12.9"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
spinners = "4.1.1"
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.4"
